@@ -1,3 +1,14 @@
+2009-03-12  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* testsuite/30_threads/condition_variable_any/native_handle/
+	typesizes.cc: Include tweaks.
+	* testsuite/30_threads/mutex/native_handle/typesizes.cc: Same.
+	* testsuite/30_threads/timed_mutex/native_handle/typesizes.cc: Same.
+	* testsuite/30_threads/thread/native_handle/typesizes.cc: Same.
+	* testsuite/30_threads/recursive_mutex/native_handle/typesizes.cc: Same.
+	* testsuite/30_threads/condition_variable/native_handle/
+	typesizes.cc: Same.
+
 2009-03-11  Jonathan Wakely  <jwakely.gcc@gmail.com>
 
 	* include/bits/shared_ptr.h: Add include guards.
